--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline_list.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline_list.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/fundodois">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/RCV_listacursos"
+            android:id="@+id/RCV_discipline_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
