--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_home.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_home.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -29,7 +28,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/md_yellow_A200"
         android:padding="20dp"
-        android:text="Graduação"
+        android:text="@string/graduation"
         android:textColor="@color/md_grey_900"
         android:textSize="15dp" />
 
@@ -42,7 +41,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/md_yellow_A200"
         android:padding="20dp"
-        android:text="@string/cursos"
+        android:text="@string/postgraduate"
         android:textColor="@color/md_grey_900"
         android:textSize="15dp" />
 
@@ -55,7 +54,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/md_yellow_A200"
         android:padding="20dp"
-        android:text="@string/autorizacao"
+        android:text="@string/authorization_act"
         android:textColor="@color/md_grey_900"
         android:textSize="15dp" />
 
@@ -68,7 +67,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/md_yellow_A200"
         android:padding="20dp"
-        android:text="@string/manualaluno"
+        android:text="@string/student_manual"
         android:textColor="@color/md_grey_900"
         android:textSize="15dp" />
 
@@ -81,7 +80,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/md_yellow_A200"
         android:padding="20dp"
-        android:text="@string/regimento"
+        android:text="@string/disciplinary_rules"
         android:textColor="@color/md_grey_900"
         android:textSize="15dp" />
 
@@ -101,7 +100,7 @@
             android:layout_weight="1"
             android:background="@color/md_light_blue_A700"
             android:padding="5dp"
-            android:text="Dirigentes"
+            android:text="@string/leaders"
             android:textColor="@color/md_grey_900"
             android:textSize="10dp" />
 
@@ -116,8 +115,10 @@
             android:layout_weight="1"
             android:background="@color/md_light_blue_A700"
             android:padding="5dp"
-            android:text="Sobre"
+            android:text="@string/about"
             android:textColor="@color/md_grey_900"
             android:textSize="10dp" />
+
     </LinearLayout>
+
 </LinearLayout>
