--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline.xml
@@ -1,109 +1,109 @@
-<android.support.v7.widget.CardView android:id="@+id/card_view"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp"
-    app:contentPadding="5sp"
-    app:cardBackgroundColor="@color/md_white_1000"
-    android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:layout_marginTop="20dp"
+    app:cardBackgroundColor="@color/md_white_1000"
+    app:cardCornerRadius="5dp"
+    app:contentPadding="5sp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="20dp">
 
         <TextView
-            android:text="@string/nomedisciplina"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/textViewNameDiscipline"
-            android:textSize="20dp"
-            android:textColor="@color/md_grey_900"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/md_grey_900"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Código:"
-                android:textSize="12dp"
-                android:textColor="@color/md_grey_900"
-                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/code"
+                android:textColor="@color/md_grey_900"
+                android:textSize="12dp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/textViewCodeDiscipline"
-                android:text="Cógido"
-                android:textSize="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text=""
                 android:textColor="@color/md_grey_900"
-                android:layout_marginTop="10dp"/>
+                android:textSize="12dp" />
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Carga horária:"
-                android:textColor="@color/md_grey_900"
-                android:textSize="12dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textViewDurationDiscipline"
-                android:text="Noturno"
-                android:textSize="12dp"
+                android:text="@string/duration"
                 android:textColor="@color/md_grey_900"
-                android:layout_marginLeft="10dp"/>
+                android:textSize="12dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewDurationDiscipline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text=""
+                android:textColor="@color/md_grey_900"
+                android:textSize="12dp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnShowTeacher"
-                android:text="ver professores"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="8dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:textColor="@color/md_white_1000"
                 android:background="@color/md_indigo_700"
-                android:layout_marginRight="5dp"/>
+                android:text="@string/teachers"
+                android:textColor="@color/md_white_1000"
+                android:textSize="8dp" />
+
             <Button
-            android:id="@+id/btnShowMenu"
-            android:text="ver ementa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="8dp"
-            android:layout_weight="1"
-                android:textColor="@color/md_white_1000"
+                android:id="@+id/btnShowMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:background="@color/md_indigo_700"
-                android:layout_marginLeft="5dp"/>
+                android:text="@string/menu"
+                android:textColor="@color/md_white_1000"
+                android:textSize="8dp" />
         </LinearLayout>
 
     </LinearLayout>
-
 
 </android.support.v7.widget.CardView>
