--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline_list.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_discipline_list.xml
@@ -1,27 +1,23 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:theme="@style/ToolbarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/md_indigo_700"
     android:fitsSystemWindows="true"
-    android:background="@color/md_indigo_700">
-
+    android:orientation="vertical"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:theme="@style/ToolbarTheme">
 
     <android.support.v7.widget.Toolbar
-        android:layout_marginTop="@dimen/status_bar_height"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:textColor="@color/md_white_1000"
+        android:layout_marginTop="@dimen/status_bar_height"
         android:elevation="4dp"
+        android:textColor="@color/md_white_1000"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ToolbarTheme" />
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,8 +31,5 @@
             android:scrollbars="vertical" />
 
     </RelativeLayout>
-
-
-
 
 </LinearLayout>
