--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_sobre.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_sobre.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_blue_50"
-    >
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/md_blue_50"
-    android:weightSum="1"
-    android:scrollbars="vertical"
-    >
+    android:background="@color/md_blue_50">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/md_blue_50"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        android:weightSum="1">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -22,106 +20,104 @@
             android:layout_height="?actionBarSize"
             android:background="@color/md_indigo_700"
             android:elevation="4dp"
-            android:title="Sobre"
             android:textColor="@color/md_white_1000"
+            android:title="Sobre"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ToolbarTheme" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
-            android:background="@color/md_blue_50">
+            android:background="@color/md_blue_50"
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/sobre"
                 android:scaleType="centerCrop"
-                />
+                android:src="@drawable/sobre" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Projeto desenvolvido por alunos do curso de Análise e Desenvolvimento de Sistemas (ADS) do Senai Cimatec:"
                 android:textSize="12dp"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Iago Gomes"
-                android:textSize="12dp"
-                android:layout_marginLeft="10dp"
-                />
+                android:textSize="12dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Joana Souza"
-                android:layout_marginLeft="10dp"
-                android:textSize="12dp"
-                />
+                android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Elnatã Oliveira"
-                android:layout_marginLeft="10dp"
-                android:textSize="12dp"
-                android:id="@+id/textView4" />
+                android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Lucas Matos"
-                android:layout_marginLeft="10dp"
-                android:textSize="12dp"
-                android:id="@+id/textView5" />
+                android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Rosalvo Matos"
-                android:textSize="12dp"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/textView6" />
+                android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Tiago França"
-                android:textSize="12dp"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/textView7" />
+                android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="Vinícius São Mateus"
-                android:textSize="12dp"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/textView8" />
+                android:textSize="12dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Professor orientador: André Guimarães Portugal"
                 android:textSize="12dp"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Coordenadora de curso: Caroline Paim"
                 android:textSize="12dp"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
 </ScrollView>
