--- a/ProjetosAndroid/PI2/app/src/main/res/layout/layout_splash.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/layout/layout_splash.xml
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:text="@string/bemvindo"
+        android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
-        android:textColor="@color/md_indigo_700"
-        android:textAlignment="center"
-        android:id="@+id/bemvindo"
-        android:layout_marginTop="40dp"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
-        android:layout_alignParentTop="true" />
+        android:layout_marginTop="40dp"
+        android:text="@string/welcome"
+        android:textAlignment="center"
+        android:textColor="@color/md_indigo_700"
+        android:textSize="40sp" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:src="@drawable/reading"
-        android:id="@+id/imageView2"
-        android:layout_alignTop="@+id/bemvindo"
+        android:layout_alignTop="@+id/welcome"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50sp"
-        />
+        android:src="@drawable/reading" />
 
     <TextView
-        android:text="@string/app_name"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textColor="@color/md_indigo_700"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:id="@+id/textView3" />
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textColor="@color/md_indigo_700"
+        android:textSize="20sp" />
 
 
     <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/senai"
-        android:layout_marginBottom="17dp"
-        android:id="@+id/imageView4"
-        android:layout_marginTop="30dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter" />
+        android:layout_marginBottom="17dp"
+        android:layout_marginTop="30dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/senai" />
 
 </LinearLayout>
