--- a/ProjetosAndroid/PI2/app/src/main/res/menu/menu_search.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/menu/menu_search.xml
@@ -1,7 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-tools:context=".atividades.CursosActivity">
+xmlns:tools="http://schemas.android.com/tools">
     <item android:id="@+id/search"
         android:title="@string/ac_pesquisar"
         android:icon="@mipmap/ic_search_white_24dp"
