--- a/ProjetosAndroid/PI2/app/src/main/res/menu/menu_home.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/menu/menu_home.xml
@@ -3,7 +3,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 tools:context=".atividades.GraduacaoActivity">
 <item android:id="@+id/quit"
-android:title="@string/ac_sair"
+android:title="@string/quit"
     android:icon="@mipmap/ic_exit_to_app_white_24dp"
     app:showAsAction="always"
     android:visible="true"
