--- a/ProjetosAndroid/PI2/app/src/main/res/menu/menu_search.xml
+++ b/ProjetosAndroid/PI2/app/src/main/res/menu/menu_search.xml
@@ -2,12 +2,12 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools">
     <item android:id="@+id/search"
-        android:title="@string/ac_pesquisar"
+        android:title="@string/search"
         android:icon="@mipmap/ic_search_white_24dp"
         app:showAsAction="collapseActionView|always"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item android:id="@+id/update"
-        android:title="@string/ac_atualizar"
+        android:title="@string/update"
         android:icon="@mipmap/ic_refresh_white_24dp"
         app:showAsAction="always"/>
 </menu>
