Ajustes parciais em "Course".

--- a/PortalCG/PortalCG/Views/Home/Index-old.cshtml
+++ b/PortalCG/PortalCG/Views/Home/Index-old.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<PortalCG.Models.JsonModels.Course>
 @{
-    ViewBag.Title = "Todos os Cursos";
+    ViewBag.Title = "Início";
     const int ITEM_PER_ROW = 3;
 }
 @if (Model?.Count > 0)
