--- a/PortalCG/PortalCG/Views/Shared/_CoursePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_CoursePartial.cshtml
@@ -59,7 +59,7 @@
                 <div class="col-md-12">
                     <a href="@Url.Action("AllDisciplines", "Course", new { id = Model.Id })" class="btn blue btn-xs">Disciplinas</a>
                     <button type="button" class="btn blue btn-xs">Professores</button>
-                    <a href="@Url.Action("UploadFile", "Course", new { idCourse = Model.Id, courseName = Model.Nome })" class="btn blue btn-xs">Arquivos</a>
+                    <a href="@Url.Action("UploadFile", "Course", new { idCourse = Model.Id, courseName = Model.Nome, option = Model.OptionRoute })" class="btn blue btn-xs">Arquivos</a>
                 </div>
             </div>
         </div>
