--- a/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
@@ -9,7 +9,8 @@
 @using (Html.BeginForm("UploadFile", "Discipline", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.HiddenFor(m => m.IdDiscipline);
-
+    @Html.HiddenFor(m => m.IdCourse);
+    @Html.HiddenFor(m => m.CourseOptionRoute);
     <div class="portlet light bordered">
         <div class="portlet-title">
             <div class="caption">
