Ajustes para exibir cursos por categoria

--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -34,6 +34,7 @@
             <div class="row">
                 <br />
                 <div class="col-md-12">
+                    <a href="#" class="btn blue btn-xs">Professores</a>
                     <a href="@Url.Action("UploadFile", "Discipline", new { idDiscipline = Model.Id, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, idCourse = Model.IdCourse })" class="btn blue btn-xs">Arquivos</a>
                 </div>
             </div>
