--- a/PortalCG/PortalCG/Views/Course/AllDisciplines.cshtml
+++ b/PortalCG/PortalCG/Views/Course/AllDisciplines.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PortalCG.Models.ViewModels.DisciplineIndexViewModel
 @{
-    ViewBag.Title = "Disciplinas de " + Model.Course.Nome;
+    ViewBag.Title = "Disciplinas do curso " + Model.Course.Nome;
     Layout = "~/Views/Shared/_Layout.cshtml";
     const int ITEM_PER_ROW = 3;
 }
