--- a/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
@@ -14,7 +14,7 @@
         <div class="course-content">
             <div class="row">
                 <div class="col-md-4">
-                    @Html.LabelFor(m => m.ModContrato)
+                    @Html.LabelFor(m => m.ModContrato, new { @class = "bold" })
                 </div>
                 <div class="col-md-8">
                     @Model.ModContrato
