Ajustes para exibir os professores da disciplina

--- a/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
@@ -11,6 +11,7 @@
     @Html.HiddenFor(m => m.IdDiscipline);
     @Html.HiddenFor(m => m.IdCourse);
     @Html.HiddenFor(m => m.CourseOptionRoute);
+    @Html.HiddenFor(m => m.OptionRoute);
     <div class="portlet light bordered">
         <div class="portlet-title">
             <div class="caption">
