--- a/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
@@ -5,9 +5,9 @@
 <div class="portlet light bordered">
     <div class="portlet-title">
         <div class="caption">
-            <a class="caption-subject bold uppercase font-blue-steel" href="#">
+            <span class="caption-subject bold uppercase font-blue-steel" href="#">
                 @Model.Nome
-            </a>
+            </span>
         </div>
     </div>
     <div class="portlet-body">
