--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -5,9 +5,9 @@
 <div class="portlet light bordered">
     <div class="portlet-title">
         <div class="caption">
-            <a class="caption-subject bold uppercase font-blue-steel" href="#">
+            <span class="caption-subject bold uppercase font-blue-steel" href="#">
                 @Model.Nome
-            </a>
+            </span>
         </div>
     </div>
     <div class="portlet-body">
@@ -27,9 +27,9 @@
                 <div class="col-md-12">
                     @if (Model.ShowTeachers)
                     {
-                        <a href="#" class="btn blue btn-xs">Professores</a>
+                        <a href="@Url.Action("AllTeachers","Discipline", new { id = Model.Id})" class="btn blue btn-xs">Professores</a>
                     }
-                    <a href="@Url.Action("UploadFile", "Discipline", new { idDiscipline = Model.Id, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, idCourse = Model.IdCourse })" class="btn blue btn-xs">Arquivos</a>
+                    <a href="@Url.Action("UploadFile", "Discipline", new { idDiscipline = Model.Id, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, idCourse = Model.IdCourse, option = Model.OptionRoute })" class="btn blue btn-xs">Arquivos</a>
                 </div>
             </div>
         </div>
