--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="@Url.Action("Index","Home")">
+                                        <a href="@Url.Action("AllDisciplines","Discipline")">
                                             <i class="icon-bar-chart"></i> Disciplinas
                                         </a>
                                     </li>
