Ajustes para exibir os professores e suas disciplinas.

--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </a>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="@Url.Action("Index","Home")">
+                                        <a href="@Url.Action("AllTeachers","Teacher")">
                                             <i class="icon-bar-chart"></i> Professores
                                         </a>
                                     </li>
