--- a/PortalCG/PortalCG/Views/Discipline/AllDisciplines.cshtml
+++ b/PortalCG/PortalCG/Views/Discipline/AllDisciplines.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<PortalCG.Models.JsonModels.Discipline>
 @{
-    ViewBag.Title = "Todas as Disciplinas";
+    ViewBag.Title = "Disciplinas";
     const int ITEM_PER_ROW = 3;
 }
 @if (Model?.Count > 0)
