--- a/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
@@ -27,7 +27,7 @@
                 <div class="col-md-12">
                     @if (Model.ShowDisciplines)
                     {
-                        <a href="#" class="btn blue btn-xs">Disciplinas</a>
+                        <a href="@Url.Action("AllDisciplines","Teacher", new { id = Model.Id})" class="btn blue btn-xs">Disciplinas</a>
                     }
                 </div>
             </div>
