--- a/PortalCG/PortalCG/Views/Course/GraduationCourses.cshtml
+++ b/PortalCG/PortalCG/Views/Course/GraduationCourses.cshtml
@@ -5,17 +5,12 @@
 }
 @if (Model?.Count > 0)
 {
-    var countGroupped = (Model.Count / ITEM_PER_ROW) + (Model.Count % ITEM_PER_ROW != 0 ? 1 : 0);
-    for (int i = 0; i < countGroupped; i++)
-    {
-        var modelGroupped = Model.Skip(i * ITEM_PER_ROW).Take(ITEM_PER_ROW).ToList();
-        <div class="row">
-            @foreach (var item in modelGroupped)
-            {
-                <div class="col-md-@(12/ITEM_PER_ROW)">
-                    @Html.Partial("_CoursePartial", item)
-                </div>
-            }
-        </div>
-    }
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-@(12/ITEM_PER_ROW)">
+                @Html.Partial("_CoursePartial", item)
+            </div>
+        }
+    </div>
 }
