--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -5,7 +5,7 @@
 <div class="portlet light bordered">
     <div class="portlet-title">
         <div class="caption">
-            <span class="caption-subject bold uppercase font-blue-steel" href="#">
+            <span class="caption-subject bold uppercase font-blue-steel searchable">
                 @Model.Nome
             </span>
         </div>
@@ -13,10 +13,9 @@
     <div class="portlet-body">
         <div class="course-content">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
                     @Html.LabelFor(m => m.CH, new { @class = "bold" })
-                </div>
-                <div class="col-md-8">
+                    :
                     @Model.CH
                 </div>
             </div>
