--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -62,12 +62,12 @@ License: You must have a valid license purchased only from themeforest(the above
                         </a>
                         <!-- END LOGO -->
                         <!-- BEGIN SEARCH -->
-                        <form class="search" action="extra_search.html" method="GET">
-                            <input type="name" class="form-control" name="query" placeholder="Pesquisar">
+                        <div class="search">
+                            <input type="name" class="form-control" name="query" id="search" placeholder="Pesquisar">
                             <a href="javascript:;" class="btn submit md-skip">
                                 <i class="fa fa-search"></i>
                             </a>
-                        </form>
+                        </div>
                         <!-- END SEARCH -->
                         <!-- BEGIN TOPBAR ACTIONS -->
                         <div class="topbar-actions">
@@ -194,6 +194,34 @@ License: You must have a valid license purchased only from themeforest(the above
             $('#clickmewow').click(function () {
                 $('#radio1003').attr('checked', 'checked');
             });
+        })
+        $(document).ready(function () {
+            EqualizeHeight();
+            $("#search").keyup(function () {
+                var valSearch = $(this).val();
+                var searchable = $(".searchable");
+                searchable.each(function (index, element) {
+                    var valElement = $(element).html().trim().toUpperCase();
+                    if (valElement.indexOf(valSearch.toUpperCase()) !== -1) {
+                        $(element).parent().parent().parent().parent().show();
+                    } else {
+                        $(element).parent().parent().parent().parent().hide();
+                    }
+                });
+                EqualizeHeight();
+            });
+            function EqualizeHeight() {
+                var elements = $(".portlet");
+                var maxHeigth = 0;
+                elements.each(function (index, element) {
+                    if ($(element).height() >= maxHeigth) {
+                        maxHeigth = $(element).height();
+                    }
+                });
+                elements.each(function (index, element) {
+                    $(element).height(maxHeigth);
+                });
+            }
         })
     </script>
 </body>
